appId: ${MAESTRO_APP_ID}
---
# iOS-only subflow to toggle AutoFill Passwords in Settings
# This should only be called from iOS test flows
- launchApp:
    appId: 'com.apple.Preferences'
- scrollUntilVisible:
    element: Apps
- tapOn: Apps
- scrollUntilVisible:
    element: Passwords
- tapOn: Passwords
- scrollUntilVisible:
    element: View AutoFill Settings
- tapOn: View AutoFill Settings
- runFlow:
    when:
      visible:
        text: '1'
        rightOf: AutoFill Passwords and Passkeys
    commands:
      - tapOn:
          text: '1'
          rightOf: AutoFill Passwords and Passkeys
- runFlow:
    when:
      visible:
        text: '1'
        rightOf: Suggest Strong Passwords
    commands:
      - tapOn:
          text: '1'
          rightOf: Suggest Strong Passwords
